<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.ankilightapp.viewmodel.CardEditViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.EditFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_placeholder"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/wordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enter_question"
            android:textSize="18sp"
            android:background="@drawable/edit_text_background"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/translationEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enter_translation"
            android:textSize="18sp"
            android:background="@drawable/edit_text_background"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/wordEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/exampleEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enter_answer"
            android:textSize="18sp"
            android:background="@drawable/edit_text_background"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/translationEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_save"
            android:src="@drawable/ic_save"
            app:backgroundTint="@color/primaryColor"
            app:layout_constraintTop_toBottomOf="@id/exampleEditText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
